--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,15 +30,15 @@
     <string name="add_custom">Add Custom</string>
     <string name="select_product_type">1. Select Your Product Type</string>
     <string name="click_here_to_add_photo">Click Here to Add Photo</string>
-    <string name="add_photo_product">3. Add a photo of your product</string>
+    <string name="add_photo_product">2. Add a photo of your product</string>
     <string name="click_here">Click Here</string>
     <string name="add_product_details">4. Add product details</string>
-    <string name="add_product_name">2. Add product Name</string>
+    <string name="add_product_name">1. Add product Name</string>
     <string name="eg_tomato">eg. Tomato</string>
     <string name="harvested_date">5. Add Harvested/Manufactured Date</string>
     <string name="harvested_date_format">eg. 08 Apr 2023</string>
     <string name="expiry_date">5. Add Expiry Date</string>
-    <string name="price">7. Set your price</string>
+    <string name="price">3. Set your price</string>
     <string name="eg_40">eg. ₹40</string>
     <string name="preview_product">Preview</string>
     <string name="product_type">1. Product type</string>
@@ -86,10 +86,10 @@
     <string name="creating_wallet_please_wait">Redirecting Please wait for a while…</string>
     <string name="image_uploaded">Image Uploaded</string>
     <string name="deny_perm_text">Please provide required permission </string>
-    <string name="_5_add_seeding_date">6. Add Seeding Date</string>
-    <string name="_8_add_farm_location">8. Add Farm Location</string>
+    <string name="_5_add_seeding_date">5. Sowing Month </string>
+    <string name="_8_add_farm_location">7. Add Farm Location</string>
     <string name="_5_seeding_date">5. Seeding Date</string>
-    <string name="_7_farm_location">7. Farm Location</string>
+    <string name="_7_farm_location">6. Farm Location</string>
     <string name="farm_location_example">eg. Chandani chowk, Delhi</string>
     <string name="detect_automatically"><u>Detect Automatically?</u></string>
     <string name="select_expiry_date">Select Expiry Date</string>
